tests/neg/i4373c.scala
// ==> 18b253a4a89a84c5674165c6fc3efafad535eee3.scala <==
object x0 {
  def x1[x2 <:_[ // error
